added first text

--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Orchard Publishing
+<!doctype html>
+<html>
+
+<head>
+  <link href="styles.css" type="text/css" rel="stylesheet">
+</head>
+
+<body>
+  <h1>Orchard Publishing</h1>
+  <p>
+    Design and typesetting expertise backed by over 20 years of experience provides publishers with a reliable, and personal service. We work with small and large publishers to develop quality publications using reliable and efficient production methods.
+  </p>
+  <h2>Services</h2>
+  <ul>
+
+    <li>
+      Typesetting
+    </li>
+    <li>
+      Convert print books to ebooks
+    </li>
+  </ul>
+
+</body>
+
+</html>
