--- a/index.html
+++ b/index.html
@@ -16,20 +16,11 @@
     <div class="wrapper">
       <header>
         <h1>Orchard Publishing</h1>
-        <p>Home of Orchard Publishing</p>
-
-        <p class="view"><a href="https://github.com/damianza/orchardpublishing">View the Project on GitHub <small>damianza/orchardpublishing</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/damianza/orchardpublishing/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/damianza/orchardpublishing/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/damianza/orchardpublishing">View On <strong>GitHub</strong></a></li>
-        </ul>
       </header>
       <section>
         <h3>
-<a id="welcome-orchard-publishing-github-space" class="anchor" href="#welcome-orchard-publishing-github-space" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome Orchard Publishing Github space.</h3>
+<a href="GrowSmart2016/www/index.html">GrowSmart Concept 2016</a>
+</h3>
 
 <p>Projects and code to share for ebook related development. Anything from css, html, and soon some javascript just for good measure.</p>
       </section>
